# starbound

./: .gitignore  Cargo.toml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: contract.rs  crew.rs  effects.rs  galaxy.rs  journey.rs  lib.rs  mission.rs  narrative.rs  npc.rs  reputation.rs  rumor.rs  ship.rs  time.rs
crates/core/tests/: sample_game_state.rs
crates/encounters/: Cargo.toml
crates/encounters/src/: lib.rs  library.rs  matcher.rs  pipeline.rs  seed_event.rs  seed_events.json  templates.rs
crates/game/: Cargo.toml
crates/game/src/: checks.rs  consequences.rs  contracts.rs  crew_conversation.rs  lib.rs  npc_interaction.rs  persistence.rs  reputation.rs  rumors.rs  supplies.rs  travel.rs
crates/llm/: Cargo.toml
crates/llm/src/: client.rs  config.rs  generate.rs  lib.rs  npc_dialogue.rs  prompt.rs  response.rs  rumor_flavor.rs
crates/simulation/: Cargo.toml
crates/simulation/src/: faction_ai.rs  faction_tick.rs  generate.rs  lib.rs  templates.rs  tick.rs  travel.rs
data/: style_bible.toml
data/events/: all_events.json  ambient.json  crew.json  exploration.json  faction.json
data/seed_events/: all_events.json  arrival_quiet_station.json
data/templates/: civilizations.json  factions.json  npc_dialogue.json  people.json  places_and_things.json  star_systems.json  star_types.csv
