[package]
name = "starbound-cli"
version = "0.1.0"
edition = "2021"
description = "Terminal frontend — replaceable presentation layer"

[dependencies]
starbound-core = { path = "../core" }
starbound-simulation = { path = "../simulation" }
starbound-encounters = { path = "../encounters" }
starbound-game = { path = "../game" }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }